core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit_mut__test__show_tag_keys_statement.snap
---
source: influxdb_influxql_parser/src/visit_mut.rs
expression: "visit_statement!(\"SHOW TAG KEYS\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_show_tag_keys_statement
- post_visit_show_tag_keys_statement
- post_visit_statement
